tests/baselines/reference/unusedSingleParameterInContructor.errors.txt
tests/cases/compiler/unusedSingleParameterInContructor.ts(2,17): error TS6133: 'person' is declared but its value is never read.
tests/cases/compiler/unusedSingleParameterInContructor.ts(3,13): error TS6133: 'unused' is declared but its value is never read.


==== tests/cases/compiler/unusedSingleParameterInContructor.ts (2 errors) ====
    class Dummy {
        constructor(person: string) {
                    ~~~~~~
!!! error TS6133: 'person' is declared but its value is never read.
            var unused = 20;
                ~~~~~~
!!! error TS6133: 'unused' is declared but its value is never read.
        }
    }